# ProxMon

./: .gitignore  .gitmodules  .qmllint.ini  CHANGELOG.md  License  POC_Imp.md  README.md  SECURITY.md  check-and-rebuild.sh  install.sh  metadata.json  proxmox-plasmoid-rebuild.service  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
apparmor/: plasmashell.local
contents/config/: config.qml  configBehavior.qml  main.xml
contents/lib/: CMakeLists.txt  Empty File  lxcterminal.cpp  lxcterminal.h  notifier.cpp  notifier.h  pbstypes.h  plugin.cpp  proxmoxclient.cpp  proxmoxclient.h  proxmoxconsts.h  proxmoxcontroller.cpp  proxmoxcontroller.h  secretstore.cpp  secretstore.h  vncclient.cpp  vncclient.h  vncframeview.cpp  vncframeview.h  vnckeysym.h  vncwsproxy.cpp  vncwsproxy.h
contents/lib/proxmox/: proxmoxclientplugin.qmltypes  qmldir
contents/qml/org/kde/plasma/proxmox/: qmldir
contents/ui/: config.qml  configAppearance.qml  configBehavior.qml  configGeneral.qml  main.qml
contents/ui/components/: CompactRepresentation.qml  ConfigGeneralDefaultsSection.qml  ConfigGeneralMultiHostSection.qml  ConfigGeneralRetrySection.qml  ConfigGeneralSingleHostSection.qml  LxcRow.qml  MultiHostEndpointSection.qml  MultiHostNodeSection.qml  NodeSection.qml  StatusBanner.qml  VmRow.qml  VncConsole.qml
docs/: ARCHITECTURE.md  dev-qml-module-packaging.md  developer-notes.md  local-qmllint-notes.md
scripts/: remove-apparmor-override.sh  setup-apparmor-override.sh
